--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web-tictactoe",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
